start using MageTab GWT compatible library